--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ script:
   - docker run ngbaophuc/fibonaci npm test -- --coverage
 
 after_success:
-  - docker build -t ngbaophuc/fibonaci-client -f prod.Dockerfile ./client
-  - docker build -t ngbaophuc/fibonaci-nginx -f prod.Dockerfile ./nginx
-  - docker build -t ngbaophuc/fibonaci-server -f prod.Dockerfile ./server
-  - docker build -t ngbaophuc/fibonaci-worker -f prod.Dockerfile ./worker
+  - docker build -t ngbaophuc/fibonaci-client -f ./client/prod.Dockerfile ./client
+  - docker build -t ngbaophuc/fibonaci-nginx -f ./nginx/prod.Dockerfile ./nginx
+  - docker build -t ngbaophuc/fibonaci-server -f ./server/prod.Dockerfile ./server
+  - docker build -t ngbaophuc/fibonaci-worker -f ./worker/prod.Dockerfile ./worker
 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push fibonaci-client
