--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push ngbaophuc/fibonaci-nginx
   - docker push ngbaophuc/fibonaci-server
   - docker push ngbaophuc/fibonaci-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: fibonaci
+  env: Fibonaci-env
+  bucket_name: elasticbeanstalk-us-east-2-773733165176
+  bucket_path: fibonaci
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
